fix(input.module.scss): input not stretching to max width

--- a/apps/web/src/components/bedrock/input/input.module.scss
+++ b/apps/web/src/components/bedrock/input/input.module.scss
@@ -25,7 +25,7 @@
   align-items: center !important;
   justify-content: start;
   height: calc(16 * g.$minecraftdepth);
-  width: auto !important;
+  // width: auto !important;
   aspect-ratio: 30 / 16;
 
   .image {
